export enum GameStates {
    FINISHED,
    IN_PROGRESS,
    PAUSED
}